# dmarc-stats

./: .gitignore  README.md  pyproject.toml
src/: dmarc_stats.py
tests/: test_dmarc_stats.py
tests/data/: count.json  dkim_fail_alignment.json  dkim_fail_multiple.json  dkim_fail_single.json  spf_fail.json  spf_fail_alignment.json  spf_neutral.json  success.json
