[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptool]
package-dir = {"" = "src"}

[project]
name = "dmarc-stats"
dynamic = ["version"]
description = "Summarize aggregated stats from parsedmarc JSON output."
readme = "README.md"
dependencies = ["parsedmarc>=8"]
requires-python = ">=3.9"

[project.scripts]
dmarc-stats = "dmarc_stats:entrypoint"

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
]
